--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ before_install:
 install:
   - export PATH=$PATH:$PWD/gcc-arm-none-eabi-4_9-2015q2/bin
 
-before_script: arm-none-eabi-gcc --version
+before_script: 
+  - arm-none-eabi-gcc --version
+  - arm-none-eabi-g++ --version
 script: ./.travis.sh
 
 cache: apt
