remove notification in travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script: ./.travis.sh
 
 cache: apt
 
-notifications:
-  irc: "chat.freenode.net#cleanflight"
-  use_notice: true
-  skip_join: true
+#notifications:
+#  irc: "chat.freenode.net#cleanflight"
+#  use_notice: true
+#  skip_join: true
